# QuickCpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/Uninitialized/: Uninitialized.h
scripts/: deinit.ps1  init.ps1
src/: Uninitialized.cpp
test/: UninitializedTest.cpp
